# group-note

./: .gitignore  README.md  circle.yml
api-server/: .gitignore  LICENSE  api-server.cabal  stack.yaml
api-server/app/: Main.hs
api-server/db/: db.sql
api-server/src/: GroupNote.hs
api-server/src/GroupNote/: Config.hs  DB.hs  Model.hs  OpenId.hs  Random.hs  Server.hs  Types.hs
api-server/src/GroupNote/Model/: AccessToken.hs  Authorization.hs  Invite.hs  InviteSession.hs  Member.hs  Note.hs  Session.hs  SessionState.hs  SessionWithInvite.hs  Team.hs  User.hs  UserSession.hs
api-server/src/GroupNote/Server/: Auth.hs  Combinators.hs  Resource.hs
client/: .gitignore  Gruntfile.js  README.md  bower.json  package.json
client/app/: index.html
client/app/scripts/: app.js
client/app/scripts/controllers/: groups.js  groupsdetail.js  login.js  main.js  notes.js  notesdetail.js  notesnew.js  register.js
client/app/scripts/services/: apiconstant.js  teammodel.js  usermodel.js
client/app/styles/: main.css
client/app/views/: login.html  main.html  register.html
client/app/views/main/: groups.html  notes.html
client/app/views/main/groups/: detail.html
client/app/views/main/notes/: detail.html  new.html
client/test/: karma.conf.js
client/test/spec/controllers/: about.js  groupsdetail.js  main.js
client/test/spec/services/: apiconstant.js  teammodel.js  usermodel.js
